# pippi

./: .gitignore  Makefile.am  README.md  configure.ac
libpippi/: Makefile.am  PipConfigParser  PipException  PipMap  PipObject  PipRelay  PipString  PipTypes  PipVariant  PipVariantMap  PipVector  pipconfigparser.cpp  pipconfigparser.h  pipdebug.cpp  pipdebug.h  pipexception.cpp  pipexception.h  pipmap.h  pipobject.cpp  pipobject.h  piprelay.cpp  piprelay.h  pipstring.cpp  pipstring.h  piptypes.h  pipvariant.cpp  pipvariant.h  pipvariant_p.cpp  pipvariant_p.h  pipvariantmap.cpp  pipvariantmap.h  pipvector.h
src/: Makefile.am  main.cpp
tests/: Makefile.am  common.am
tests/common/: pipunittest.cpp  pipunittest.h
tests/ut_pipconfigparser/: Makefile.am  ut_pipconfigparser.cpp  ut_pipconfigparser.h
tests/ut_pipvariant/: Makefile.am  ut_pipvariant.cpp  ut_pipvariant.h
